hphp/test/quick/Xhp.php.expectf

Fatal error: XHP: mismatched tag: 'ul' not the same as 'li' in %s on line 3
